--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.5",
+    "google-auth-library": "^8.5.2",
     "googleapis": "^108.0.0",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.7.0",
